2004-11-03    <mschimek@users.sf.net>

	* src/dvb_mux.c (_vbi_dvb_multiplex_sliced,
	  _vbi_dvb_multiplex_samples), src/dvb_demux.c (demux_data_units):
	  D'oh! Got stuffing wrong.
	* src/dvb_mux.c (_vbi_dvb_multiplex_sliced),
	  src/dvb_demux.c (demux_data_units): Don't reverse VPS bits.
	* src/dvb_demux.c: Improved data unit loop to handle field packets.
	* src/io-dvb.c: Ported to new vbi_dvb_demux, untested.
	* po/de.po, po/fr.po, po/es.po, po/nl.po, po/pl.po, po/sv.po:
	  Converted to UTF-8.

2004-10-31    <mschimek@users.sf.net>

	* src/chains.c: Compile only for V4L/V4L2.
	* configure.in: Added FreeBSD ioctl request type.
	* src/proxy-client.c (proxy_client_check_msg): s/EPROTO/EMSGSIZE
	  for FreeBSD.
	  (proxy_client_wait_select): FreeBSD FD_ISSET return type mismatch.

2004-10-27    <mschimek@users.sf.net>

	* src/dvb_mux.c (_vbi_dvb_mux_delete): NULL and CLEAR fix.
	(_vbi_dvb_mux_pes_new): Fixed data_identifier position.
	* src/dvb_mux.c, src/dvb_mux.h: Added, experimental.
	* test/capture.c: Changed PTS source to timestamps.
	* test/export.c: Extended to consume DVB streams.
	
2004-10-25    <mschimek@users.sf.net>

	* po/POTFILES.in: Added proxy-client.c, proxy-msg.c.
	* src/proxy-client.c, src/proxy-msg.c: Massaged error messages.
	* daemon/Makefile.am: Added zvbi-chains target.
	* src/Makefile.am: Added libzvbi-chains target.
	* daemon/chains.c, src/chains.c: Added from proxy-18.bak.
	* daemon/chains.c (main): Replaced sprintf by asprintf and fixed
	  p_env3.
	* configure.in: Added ioctl request type check for chains.
	* test/README: DVB capture update.
	* test/capture.c: Extended to create DVB streams.
	* src/Makefile.am (libzvbi_la_SOURCES): Added dvb.h, dvb_mux.c,
	  dvb_mux.h.
	* src/dvb.h: New definitions for DVB-VBI mux/demux.
	* src/dvb_mux.c, src/dvb_mux.h: Added, experimental.
	* src/sliced.h: Added vbi_service_set.
	* configure.in: Added strndup, strlcpy, asprintf checks.
	* src/misc.h: Added strndup() and asprintf() fallback macros.